# slotTime_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  app.db  create_user_test.py  entrypoint.sh  fly.toml  pyproject.toml  requirements.txt  seed.py  theme.css  vercel.json
app/: config.py  crud.py  db.py  deps.py  enums.py  main.py  models.py  notifications.py  schemas.py  supabase_client.py  utils.py  webhooks.py
app/routers/: auth.py  calendar.py  companies.py  day_capacity.py  docks.py  me.py  notices.py  reports.py  seed.py  slots.py  templates.py  users.py  warehouses.py
poprzednia wersja/WH_Slot_booking_python_API/: README.md
poprzednia wersja/WH_Slot_booking_python_API/backend/: requirements.txt  timeslot.db
tests/: test_auth.py  test_companies.py  test_docks.py  test_slots.py  test_users.py
wh-slot-booking/: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  TODO.md  TODO_FAZA2.md  TODO_FAZA3.md  automatyzacj.md  docker-compose.yml  docker.yaml  struktura_danych.md  todomd.activatePattern.md  zadania.md
wh-slot-booking/.claude/: settings.local.json
wh-slot-booking/backend/: .env.example  Dockerfile  app.db  entrypoint.sh  fly.toml  requirements.txt  run_dev.sh  seed.py
wh-slot-booking/backend/.claude/: settings.local.json
wh-slot-booking/docs/: TODO.md  fastapi_best_practices.md  raporty_plan.md  update_2026_02_05.md
wh-slot-booking/frontend/: .env.development  Dockerfile  README.md  TODO.md  fail_test.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
wh-slot-booking/nginx/: nginx.conf
(+175 files in other folders)
