[project]
name = "app"
version = "0.1.0"
dependencies = [ "alembic==1.18.4", "bcrypt==5.0.0", "fastapi==0.135.1", "httpx==0.28.1", "passlib==1.7.4", "pydantic==2.12.5", "pydantic-settings==2.13.1", "pytest==9.0.2", "python-dotenv==1.2.2", "python-jose==3.5.0", "python-multipart==0.0.22", "sqlalchemy==2.0.48", "uvicorn==0.41.0" ]
requires-python = "~=3.13.0"
